...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rPX-ld-mcZ">
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <items>
                                    <navigationItem title="Route Buddy" id="3oJ-r8-Vcr"/>
                                </items>
                            </navigationBar>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x9s-0v-Eva">
                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Home" id="ijB-rp-B77">
                        <barButtonItem key="rightBarButtonItem" title="Settings" id="cqF-6b-RMz" userLabel="Settings Button">
                            <connections>
                                <segue destination="jbt-4W-W9O" kind="show" id="gSN-Zt-Qq3"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="420" height="105"/>
                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="vDj-Eg-omf" secondAttribute="height" multiplier="4:1" id="bQC-Np-ZzC"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Emergency Contacts">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="10"/>
                                            </userDefinedRuntimeAttribute>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pMk-qQ-Ldj" userLabel="Edit Button">
                                                    <rect key="frame" x="440" y="0.0" width="80" height="43"/>
                                                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="5BK-oO-wGy"/>
                                                    </constraints>
                                                    <state key="normal" title="Edit">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4f-K2-c0k">
                                                    <rect key="frame" x="520" y="0.0" width="80" height="43"/>
                                                    <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="EJc-XW-zN4"/>
                                                    </constraints>
                                                    <state key="normal" title="Delete">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                </button>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="ifo-xm-sF3" firstAttribute="leading" secondItem="C1k-hj-jFV" secondAttribute="leading" constant="10" id="2L8-8l-Xyf"/>
...
                                <exclude reference="dyO-my-9Iu"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Emergency Contacts" id="KKH-nV-5O2">
                        <barButtonItem key="backBarButtonItem" title="Back" id="EKC-ef-8gF"/>
                        <barButtonItem key="rightBarButtonItem" title="+ Add" id="A1Z-UF-sbQ" userLabel="Add Button">
                            <connections>
                                <segue destination="djm-H9-vHG" kind="show" id="3E7-C3-K8A"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
