...
        self.phoneNumberField.text = self.emergencyContact.phoneNumber;
        self.icon.image = [UIImage imageWithData:self.emergencyContact.image];
        self.titleBar.title = @"Edit Emergency Contact";
        self.updateButton.action = @selector(updateEmergencyContact:);
        self.updateButton.title = @"Update";
    } else {
        self.titleBar.title = @"New Emergency Contact";
        self.updateButton.title = @"Save";
        self.updateButton.action = @selector(insertNewObject:);
        [self clearFields];
    }
    
    // Dismiss text fields on tap
    UITapGestureRecognizer *tap = [[UITapGestureRecognizer alloc] initWithTarget:self action:@selector(dismissKeyboards)];
...
