...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Route Buddy" id="M5Z-1G-xw9">
                        <barButtonItem key="rightBarButtonItem" title="Settings" id="sxq-m1-Td1" userLabel="Settings">
                            <connections>
                                <segue destination="iQ6-ym-S21" kind="show" identifier="showSettings" id="zSc-IG-rat"/>
...
                                    <constraint firstAttribute="height" constant="50" id="tZI-tB-zbY"/>
                                </constraints>
                                <state key="normal" title="Destinations">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Update" id="fcN-65-LIN" userLabel="Update Button">
                            <connections>
                                <action selector="updateEmergencyContact:" destination="JEX-9P-axG" id="OMC-0H-Vec"/>
...
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                            <items>
                                <barButtonItem title="+ Add" id="cgH-Vd-OBy" userLabel="Add Button"/>
                            </items>
                        </toolbar>
...
                                    <constraint firstAttribute="height" constant="50" id="Cfm-gV-b0X"/>
                                </constraints>
                                <state key="normal" title="Select a Location">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Edit Destination" id="xh8-Gf-4xn">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="nwk-yV-uWK" userLabel="Cancel Button">
                            <connections>
...
                                    <constraint firstAttribute="height" constant="50" id="qxX-Gf-eTs"/>
                                </constraints>
                                <state key="normal" title="Pin Current Location">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Select" id="f4D-75-I44" userLabel="Select Button">
                            <connections>
                                <action selector="selectCurrentPinLocation:" destination="Dz9-53-xwu" id="M8V-h1-YZE"/>
...
