...

-(void)performAlertAboutEmergencyContacts {
    [self.fetchedResultsController performFetch:nil];
    if ([[self.fetchedResultsController fetchedObjects] count] > 0)
        return;
    
    UIAlertView *alert = [[UIAlertView alloc] initWithTitle:@"No emergency contacts" message:@"You currently have no emergency contacts set in your app. You can do this through the settings page." delegate:nil cancelButtonTitle:@"OK" otherButtonTitles:nil];
    [alert show];
}

#pragma mark - Fetched results controller

- (NSFetchedResultsController *)fetchedResultsController
...
